.opsera-chennai-flood-2000/k8s/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: opsera-chennai-flood-2000-dev
  labels:
    app: chennai-flood-2000
    tenant: opsera
    environment: dev
